--- a/docs/sphinx/_static/custom.css
+++ b/docs/sphinx/_static/custom.css
@@ -1,43 +1,55 @@
-/* This is the custom CSS for alabaster. The theme does not allow for it to be set differently. */
+@charset "utf-8";
 
 .red {
-  color: red;
-}
+    color: red;
+  }
 
-.green {
-  color: green;
-}
+  .green {
+    color: green;
+  }
 
-.pink {
-  color: pink;
-}
+  .pink {
+    color: pink;
+  }
 
-.orange {
-  color: orange;
-}
+  .orange {
+    color: orange;
+  }
 
-.purple {
-  color: purple;
-}
+  .purple {
+    color: purple;
+  }
 
-a.reference > em {
-  font-style: normal !important;
-}
-
-a.reference > code {
-  font-weight: inherit !important;
-  color: inherit;
-  background-color: inherit;
-}
-
-ul, ol {
-  margin: 0px 0 0px 30px;
-}
-
-a.reference {
-  border-bottom: 0px;
-}
-
-td.field-body > ul > li > em {
+  a.reference > em {
     font-style: normal !important;
-}
+  }
+
+  a.reference > code {
+    font-weight: inherit !important;
+    color: inherit;
+    background-color: inherit;
+  }
+
+  ul, ol {
+    margin: 0px 0 0px 30px;
+  }
+
+  a.reference {
+    border-bottom: 0px;
+  }
+
+  td.field-body > ul > li > em {
+      font-style: normal !important;
+  }
+
+  .underline{
+    text-decoration: underline;
+  }
+
+  dl + .class, dl + .function, span + .class, span + .function {
+    padding-top: 30px;
+  }
+
+  dl + .method, span + .method {
+    padding-top: 10px;
+  }
